--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^2.0.4",
+    "typed.js": "^2.0.11"
   }
 }
